<resources>
  <string name="app_name">Вариант 2</string>
  <string name="water_molecular_mass">
    Масса m одной молекулы воды равна 3E-23 гр.
  </string>
  <string name="molecular_calculator">Калькулятор молекул</string>
  <string name="water_quarts_count">Количество воды в квартах</string>
  <string name="calculate">Рассчитать</string>
  <string name="result">Результат</string>
  <string name="enter_value_first">Сначала введите значение</string>
  <string name="about_app">О приложении</string>
  <string name="fifteen_puzzle">Пятнашки</string>
  <string name="settings">Настройки</string>
  <string name="primary_color">Основной цвет</string>
  <string name="color_light">Светлый</string>
  <string name="color_dark">Темный</string>
  <string name="color_green">Зеленый</string>
  <string name="secondary_color">Дополнительный цвет</string>
  <string name="text_color">Цвет текста</string>
  <string name="apply">Принять</string>
  <string name="matrix">Матрица</string>
  <string name="matrix_task">Определить, есть ли в данной матрице строка, состоящая только из элементов, принадлежащих промежутку</string>
  <string name="from">от</string>
  <string name="to">до</string>
  <string name="a">A</string>
  <string name="b">B</string>
  <string name="define">Определить</string>
  <string name="notification">Уведомления</string>
  <string name="draw">Рисование</string>
  <string name="map_search">Поиск места на карте</string>
  <string name="enter_address">Введите адрес</string>
  <string name="search">Найти</string>
  <string name="address_format_hint">Части адреса разделяйте запятой</string>
  <string name="map">Карта</string>
  <string name="streetview">Прогуляться</string>
  <string name="clear">Очистить</string>
  <string name="im_so_cool">Я красавчик</string>
  <string name="with_buttons">С кнопками</string>
  <string name="inbox">Inbox</string>
  <string name="with_big_picture">С большой картинкой</string>
  <string name="with_long_text">С длинным текстом</string>
  <string name="common">Обычное</string>
  <string name="pushkin">
    У лукоморья дуб зелёный;
    Златая цепь на дубе том:
    И днём и ночью кот учёный
    Всё ходит по цепи кругом;
    Идёт направо — песнь заводит,
    Налево — сказку говорит.
    Там чудеса: там леший бродит,
    Русалка на ветвях сидит;
    Там на неведомых дорожках
    Следы невиданных зверей;
    Избушка там на курьих ножках
    Стоит без окон, без дверей;
    Там лес и дол видений полны;
    Там о заре прихлынут волны
    На брег песчаный и пустой,
    И тридцать витязей прекрасных
    Чредой из вод выходят ясных,
    И с ними дядька их морской;
    Там королевич мимоходом
    Пленяет грозного царя;
    Там в облаках перед народом
    Через леса, через моря
    Колдун несёт богатыря;
    В темнице там царевна тужит,
    А бурый волк ей верно служит;
    Там ступа с Бабою Ягой
    Идёт, бредёт сама собой,
    Там царь Кащей над златом чахнет;
    Там русский дух… там Русью пахнет!
    И там я был, и мёд я пил;
    У моря видел дуб зелёный;
    Под ним сидел, и кот учёный
    Свои мне сказки говорил.
  </string>
  <string name="time_converter">Конвертер времени</string>
  <string name="time_converter_hint">Введите время, и оно автоматически переведется в минуты и секунды</string>
  <string name="time_format">чч:мм:сс</string>
  <string name="invalid_time_format">Неверный формат времени. Должно быть чч:мм:сс.</string>
  <string name="clear_output">Очистить вывод</string>
  <string name="output_seconds">Выводит секунды</string>
  <string name="output_minutes">Выводит минуты</string>
  <string name="theme">Тема</string>
  <string name="light">Светлая</string>
  <string name="dark">Темная</string>
  <string name="system">Система</string>
  <string name="font_size">Размер шрифта</string>
  <string name="big">Большой</string>
  <string name="medium">Средний</string>
  <string name="small">Маленький</string>
  <string name="font_family">Шрифт</string>
  <string name="arial">Arial</string>
  <string name="intel">Intel</string>
  <string name="times_new_roman">Times New Roman</string>
  <string name="sans_serif">Sans Serif</string>
  <string name="monospace">Monospace</string>
  <string name="roboto">Roboto</string>
  <string name="nmmatrix_descr">Поиск столбцов с одинаковым количество положительных и отрицательных элементов</string>
  <string name="find_columns">Найти столбцы</string>
  <string name="nmmatrix_help_text">Элементы матрицы разделяются пробелом, строки переносом строки.</string>
  <string name="x1">x1</string>
  <string name="y1">y1</string>
  <string name="points_distance_title">Определить расстояние между двумя точками</string>
  <string name="point1">Точка 1:</string>
  <string name="point2">Точка 2:</string>
  <string name="x2">x2</string>
  <string name="y2">y2</string>
  <string name="empty_points">Заполнены не все поля\nПожалуйста, введите значения</string>
  <string name="decimals_count">Знаков после запятой</string>
  <string name="only_int">Только целые числа</string>
  <string name="save">Сохранить</string>
  <string name="points_distance">Расстояние между точек</string>
  <string name="matrix17_task">Дана матрица A(m,n). Сформировать одномерный массив B(m), элементами которого являются суммы элементов і-ой строки, начиная с первого отрицательного элемента и до конца строки матрицы (0 - если отрицательный элемент отсутствует).</string>
  <string name="formulate">Сформировать</string>
</resources>