<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_clear_output"
      android:title="@string/clear_output"
      android:orderInCategory="1"
      app:showAsAction="never" />
  <item
      android:id="@+id/to_nmmatrix"
      android:title="@string/matrix"
      android:orderInCategory="2"
      app:showAsAction="never" />
  <item
      android:id="@+id/output_minutes"
      android:title="@string/output_minutes"
      android:checkable="true"
      android:checked="true"
      android:orderInCategory="3"
      app:showAsAction="never" />
  <item
      android:id="@+id/output_seconds"
      android:title="@string/output_seconds"
      android:checkable="true"
      android:checked="true"
      android:orderInCategory="4"
      app:showAsAction="never" />
  <item
      android:id="@+id/settings"
      android:title="@string/settings"
      android:orderInCategory="5"
      app:showAsAction="never" />

</menu>
