<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="80dp"
    android:gravity="center">

  <Button
      android:id="@+id/btn_common"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/common" />

  <Button
      android:id="@+id/btn_with_buttons"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/with_buttons" />

  <Button
      android:id="@+id/btn_with_long_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/with_long_text" />

  <Button
      android:id="@+id/btn_with_big_picture"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/with_big_picture" />

  <Button
      android:id="@+id/btn_inbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/inbox" />

</LinearLayout>