<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".v17.PointsDistanceActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingHorizontal="30dp"
    android:paddingBottom="60dp">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/points_distance_title"
      android:textSize="36sp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/x1"
        android:hint="@string/x1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/y1"
        android:hint="@string/y1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textSize="20sp" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/x2"
        android:hint="@string/x2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/y2"
        android:hint="@string/y2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textSize="20sp" />

  </LinearLayout>

  <Button
      android:id="@+id/btn_find_distance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/search"
      android:textSize="20sp" />

</LinearLayout>