<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".v6.TcSettingsActivity"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/theme"
      android:textSize="30sp"
      android:layout_marginTop="30dp"
      android:paddingHorizontal="20dp" />

  <RadioGroup
      android:paddingHorizontal="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <RadioButton
        android:id="@+id/theme_light"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:textSize="22sp" />

    <RadioButton
        android:id="@+id/theme_dark"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/dark"
        android:textSize="22sp" />

  </RadioGroup>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/decimals_count"
      android:textSize="30sp"
      android:paddingHorizontal="20dp" />

  <EditText
      android:id="@+id/decimals_count"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:importantForAutofill="no"
      android:inputType="number"
      android:textSize="24sp"
      android:hint="@string/only_int" />

  <Button
      android:id="@+id/btn_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      android:textSize="18sp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_gravity="end" />

</LinearLayout>