<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

  <GridLayout
      android:id="@+id/main"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:rowCount="5"
      android:columnCount="2"
      tools:ignore="UselessParent">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:paddingBottom="16dp"
        android:text="@string/molecular_calculator"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/et_water_quarts_count"
        android:layout_gravity="fill"
        android:inputType="number"
        android:importantForAutofill="no"
        android:hint="@string/water_quarts_count" />

    <Button
        android:id="@+id/btn_calculate"
        android:text="@string/calculate" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:text="@string/water_molecular_mass"
        android:textSize="16sp" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:paddingTop="20dp"
        android:text="@string/result"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tw_molecular_count"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

  </GridLayout>

</FrameLayout>