<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

  <LinearLayout
      android:id="@+id/main"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical"
      tools:ignore="UselessParent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/map_search"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:inputType="text|textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/enter_address" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Button
          android:id="@+id/btn_search"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_marginEnd="8dp"
          android:text="@string/search"
          tools:ignore="ButtonStyle" />

      <Button
          android:id="@+id/btn_streetview"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_marginStart="8dp"
          android:text="@string/streetview"
          tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_format_hint"
        android:textSize="16sp"
        android:textAlignment="center" />

  </LinearLayout>

</FrameLayout>